Openshift_POC/target/classes/META-INF/fabric8/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/iconUrl: img/icons/camel.svg
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    labels:
      expose: "true"
      app: camel-ose-springboot-xml
      provider: fabric8
      version: 1.0.0-SNAPSHOT
      group: org.mycompany
    name: camel-ose-springboot-xml
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: camel-ose-springboot-xml
      provider: fabric8
      group: org.mycompany
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      fabric8.io/iconUrl: img/icons/camel.svg
      fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=camel-ose-springboot-xml&var-version=1.0.0-SNAPSHOT
    labels:
      app: camel-ose-springboot-xml
      provider: fabric8
      version: 1.0.0-SNAPSHOT
      group: org.mycompany
    name: camel-ose-springboot-xml
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: camel-ose-springboot-xml
      provider: fabric8
      group: org.mycompany
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        annotations:
          fabric8.io/iconUrl: img/icons/camel.svg
          fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=camel-ose-springboot-xml&var-version=1.0.0-SNAPSHOT
        labels:
          app: camel-ose-springboot-xml
          provider: fabric8
          version: 1.0.0-SNAPSHOT
          group: org.mycompany
      spec:
        containers:
        - env:
          - name: SPRING_APPLICATION_JSON
            value: '{"server":{"tomcat":{"max-threads":1}}}'
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: mycompany/camel-ose-springboot-xml:snapshot-191121-195833-0608
          imagePullPolicy: IfNotPresent
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          resources:
            limits:
              cpu: "1.0"
            requests:
              cpu: "0.2"
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      expose: "true"
      app: camel-ose-springboot-xml
      provider: fabric8
      version: 1.0.0-SNAPSHOT
      group: org.mycompany
    name: camel-ose-springboot-xml
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: camel-ose-springboot-xml
